[gd_scene load_steps=5 format=3 uid="uid://c3ba6ngtqm7fj"]

[ext_resource type="Script" path="res://environment/power_switch.gd" id="1_hvciv"]
[ext_resource type="AudioStream" uid="uid://cjfs07ul3js7t" path="res://sfx/switch_click.ogg" id="2_twaxx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8myfk"]
size = Vector2(8, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c8as1"]
size = Vector2(48, 10)

[node name="PowerSwitch" type="StaticBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_hvciv")

[node name="RightSwitch" type="Area2D" parent="."]
position = Vector2(14, -12)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightSwitch"]
shape = SubResource("RectangleShape2D_8myfk")

[node name="Flip2" type="Line2D" parent="RightSwitch"]
position = Vector2(-1, 0)
rotation = 3.14159
scale = Vector2(1, -1)
points = PackedVector2Array(-7, -1, 9, 5)
width = 6.0
default_color = Color(0.816549, 0, 0.168767, 1)

[node name="LeftSwitch" type="Area2D" parent="."]
position = Vector2(-14, -12)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftSwitch"]
shape = SubResource("RectangleShape2D_8myfk")

[node name="Flip3" type="Line2D" parent="LeftSwitch"]
position = Vector2(1, 0)
points = PackedVector2Array(-7, -1, 9, 5)
width = 6.0
default_color = Color(0.816549, 0, 0.168767, 1)

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(-24, -5, 24, -5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_c8as1")

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_twaxx")
volume_db = -80.0
pitch_scale = 1.33
attenuation = 4.0
bus = &"SFX"

[connection signal="body_entered" from="RightSwitch" to="." method="_on_right_switch_body_entered"]
[connection signal="body_entered" from="LeftSwitch" to="." method="_on_left_switch_body_entered"]
